force-app/main/default/objects/Log_Integracion__c/Log_Integracion__c.object-meta.xml
<CustomObject>
    <description>Objeto custom para registrar todas las integraciones (outbound e inbound) del proyecto TuFirma Digital</description>
    <label>Log Integración</label>
    <nameField>
        <label>Nombre de Log Integración</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Log Integraciones</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>