force-app/main/default/objects/Log_Integracion__c/fields/Contexto__c.field-meta.xml
<CustomField>
    <fullName>Contexto__c</fullName>
    <description>ID de Quote, Contrato_ID__c u otro dato relacionado</description>
    <label>Contexto</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>