force-app/main/default/objects/Log_Integracion__c/fields/Duracion_Ms__c.field-meta.xml
<CustomField>
    <fullName>Duracion_Ms__c</fullName>
    <description>Duración en milisegundos (principalmente para outbound)</description>
    <label>Duración Ms</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>