force-app/main/default/objects/Log_Integracion__c/fields/Exito__c.field-meta.xml
<CustomField>
    <fullName>Exito__c</fullName>
    <defaultValue>false</defaultValue>
    <description>`true` si la operación fue exitosa, `false` si falló</description>
    <label>Éxito</label>
    <type>Checkbox</type>
</CustomField>