force-app/main/default/objects/Log_Integracion__c/fields/Mensaje_Error__c.field-meta.xml
<CustomField>
    <fullName>Mensaje_Error__c</fullName>
    <description>Mensaje de error cuando falla la integración</description>
    <label>Mensaje Error</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>