force-app/main/default/objects/Log_Integracion__c/fields/Metodo_HTTP__c.field-meta.xml
<CustomField>
    <fullName>Metodo_HTTP__c</fullName>
    <description>Método HTTP: GET, POST, PUT, PATCH, DELETE</description>
    <label>Metodo HTTP</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>GET</fullName>
            </value>
            <value>
                <fullName>POST</fullName>
            </value>
            <value>
                <fullName>PUT</fullName>
            </value>
            <value>
                <fullName>PATCH</fullName>
            </value>
            <value>
                <fullName>DELETE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>