force-app/main/default/objects/Log_Integracion__c/fields/Origen__c.field-meta.xml
<CustomField>
    <fullName>Origen__c</fullName>
    <description>Clase o componente que ejecutó la integración (ej: `ICB_FirmaDigitalServiceImpl.solicitarUploadUrl`)</description>
    <label>Origen</label>
    <length>255</length>
    <type>Text</type>
</CustomField>