force-app/main/default/objects/Log_Integracion__c/fields/Request_Headers__c.field-meta.xml
<CustomField>
    <fullName>Request_Headers__c</fullName>
    <description>Headers enviados o recibidos (JSON o texto plano)</description>
    <label>Request Headers</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>