force-app/main/default/objects/Log_Integracion__c/fields/Response_Headers__c.field-meta.xml
<CustomField>
    <fullName>Response_Headers__c</fullName>
    <description>Headers de la respuesta</description>
    <label>Response Headers</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>