force-app/main/default/objects/Log_Integracion__c/fields/Response_Status_Code__c.field-meta.xml
<CustomField>
    <fullName>Response_Status_Code__c</fullName>
    <description>Código HTTP (200, 404, 500, etc.)</description>
    <label>Response Status Code</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>