force-app/main/default/objects/Log_Integracion__c/fields/URL__c.field-meta.xml
<CustomField>
    <fullName>URL__c</fullName>
    <description>URL del endpoint (outbound). Inbound puede ir vacío</description>
    <label>URL</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>