force-app/main/default/objects/Log_Integracion__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>CREATED_DATE</columns>
    <columns>URL__c</columns>
    <columns>Direccion__c</columns>
    <columns>Exito__c</columns>
    <columns>Metodo_HTTP__c</columns>
    <columns>Response_Status_Code__c</columns>
    <filterScope>Everything</filterScope>
    <label>Todos</label>
</ListView>